Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98735

C:/Users/qt/work/install/include/QtCore/6.3.0/QtCore\private/qobject_p.h:497:78: error: 'q_func' is a private member of 'QSerialPortPrivate'

XMLWordPrintable

    • 3b8b630bcc (qt/qtserialport/6.3) 3b8b630bcc (qt/tqtc-qtserialport/6.3) ea373db31a (qt/tqtc-qtserialport/6.2.3) ea373db31a (qt/qtserialport/6.2.4) ea373db31a (qt/tqtc-qtserialport/6.2.4) 3b8b630bcc (qt/qtserialport/6.3.0) ea373db31a (qt/qtserialport/6.2)

      gent:2021/11/29 02:40:51 build.go:394: In file included from /Users/qt/work/qt/qtserialport/src/serialport/qserialport_win.cpp:42:
      agent:2021/11/29 02:40:51 build.go:394: In file included from /Users/qt/work/qt/qtserialport/src/serialport/qserialport_p.h:60:
      agent:2021/11/29 02:40:51 build.go:394: In file included from C:/Users/qt/work/install/include/QtCore/6.3.0/QtCore\private/qiodevice_p.h:61:
      agent:2021/11/29 02:40:51 build.go:394: C:/Users/qt/work/install/include/QtCore/6.3.0/QtCore\private/qobject_p.h:497:78: error: 'q_func' is a private member of 'QSerialPortPrivate'
      agent:2021/11/29 02:40:51 build.go:394:     using Obj = std::remove_pointer_t<decltype(std::declval<ObjPrivate *>()->q_func())>;
      agent:2021/11/29 02:40:51 build.go:394:                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      agent:2021/11/29 02:40:51 build.go:394: C:/Users/qt/work/install/include\QtCore/qobjectdefs_impl.h:170:13: note: in instantiation of function template specialization 'QtPrivate::assertObjectType<QSerialPortPrivate>' requested here
      agent:2021/11/29 02:40:51 build.go:394:             assertObjectType<Obj>(o);
      agent:2021/11/29 02:40:51 build.go:394:             ^
      agent:2021/11/29 02:40:51 build.go:394: C:/Users/qt/work/install/include\QtCore/qobjectdefs_impl.h:208:91: note: in instantiation of member function 'QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, bool (QSerialPortPrivate::*)()>::call' requested here
      agent:2021/11/29 02:40:51 build.go:394:             FunctorCall<typename Indexes<ArgumentCount>::Value, SignalArgs, R, Function>::call(f, o, arg);
      agent:2021/11/29 02:40:51 build.go:394:                                                                                           ^
      agent:2021/11/29 02:40:51 build.go:394: C:/Users/qt/work/install/include/QtCore/6.3.0/QtCore\private/qobject_p.h:512:36: note: in instantiation of function template specialization 'QtPrivate::FunctionPointer<bool (QSerialPortPrivate::*)()>::call<QtPrivate::List<>, void>' requested here
      agent:2021/11/29 02:40:51 build.go:394:                 FuncType::template call<Args, R>(static_cast<QPrivateSlotObject*>(this_)->func(),
      agent:2021/11/29 02:40:51 build.go:394:                                    ^
      agent:2021/11/29 02:40:51 build.go:394: C:/Users/qt/work/install/include/QtCore/6.3.0/QtCore\private/qobject_p.h:522:60: note: in instantiation of member function 'QtPrivate::QPrivateSlotObject<bool (QSerialPortPrivate::*)(), QtPrivate::List<>, void>::impl' requested here
      agent:2021/11/29 02:40:51 build.go:394:     explicit QPrivateSlotObject(Func f) : QSlotObjectBase(&impl), FunctionStorage<Func>{std::move(f)} {}
      agent:2021/11/29 02:40:51 build.go:394:                                                            ^
      agent:2021/11/29 02:40:51 build.go:394: C:/Users/qt/work/install/include/QtCore/6.3.0/QtCore\private/qobject_p.h:550:13: note: in instantiation of member function 'QtPrivate::QPrivateSlotObject<bool (QSerialPortPrivate::*)(), QtPrivate::List<>, void>::QPrivateSlotObject' requested here
      agent:2021/11/29 02:40:51 build.go:394:         new QtPrivate::QPrivateSlotObject<Func2, typename QtPrivate::List_Left<typename SignalType::Arguments, SlotType::ArgumentCount>::Value,
      agent:2021/11/29 02:40:51 build.go:394:             ^
      agent:2021/11/29 02:40:51 build.go:394: /Users/qt/work/qt/qtserialport/src/serialport/qserialport_win.cpp:627:29: note: in instantiation of function template specialization 'QObjectPrivate::connect<void (QTimer::*)(QTimer::QPrivateSignal), bool (QSerialPortPrivate::*)()>' requested here
      agent:2021/11/29 02:40:51 build.go:394:             QObjectPrivate::connect(startAsyncWriteTimer, &QTimer::timeout, this, &QSerialPortPrivate::_q_startAsyncWrite);
      agent:2021/11/29 02:40:51 build.go:394:                             ^
      agent:2021/11/29 02:40:51 build.go:394: /Users/qt/work/qt/qtserialport/src/serialport/qserialport_p.h:128:5: note: implicitly declared private here
      agent:2021/11/29 02:40:51 build.go:394:     Q_DECLARE_PUBLIC(QSerialPort)
      agent:2021/11/29 02:40:51 build.go:394:     ^
      agent:2021/11/29 02:40:51 build.go:394: C:/Users/qt/work/install/include/QtCore\qglobal.h:1335:19: note: expanded from macro 'Q_DECLARE_PUBLIC'
      agent:2021/11/29 02:40:51 build.go:394:     inline Class* q_func() noexcept { return static_cast<Class *>(q_ptr); } \
      agent:2021/11/29 02:40:51 build.go:394:                   ^
      agent:2021/11/29 02:40:51 build.go:394: 1 error generated.
      agent:2021/11/29 02:40:51 build.go:394: ninja: build stopped: subcommand failed.
      agent:2021/11/29 02:40:51 build.go:445: Process finished with error: exit status 1
      agent:2021/11/29 02:40:51 build.go:805: Executing scheduled instruction 1 of 2 - Upload all core dumps if there are some
      agent:2021/11/29 02:40:51 build.go:635: Skip uploading core files because CORE_FILES_PATH is not set in the environment
      

      Build log: https://testresults.qt.io/logs/qt/qtserialport/8c959768d088277b44122eab66e3e0c8f3de3a02/WindowsWindows_10_21H1x86_64WindowsWindows_10_21H1x86_64Clangqtci-windows-10_21H1-x86_64-52-abccd4Sccache/89e974da07b717c798e3a42eedc037d617ba847e/build_1638153599/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtserialport/tasks/1638153568

      Tested changes (refs/builds/qtci/dev/1638153513):
      https://codereview.qt-project.org/c/qt/qtserialport/+/383544/2 Update dependencies on 'dev' in qt/qtserialport

        For Gerrit Dashboard: QTBUG-98735
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes