Move Q_DECLARE_PUBLIC to the public section

This is now required to use QObjectPrivate::connect.

Fixes: QTBUG-98735
Pick-to: 6.2
Change-Id: Iec32a4726faa34b3fe57d9cd97c5d806db6b0377
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Marc Mutz <marc.mutz@qt.io>